--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "license": "0BSD",
   "dependencies": {
-    "gatsby": "^4.10.0",
+    "gatsby": "^4.7.2",
+    "gatsby-source-graphql": "^4.7.0",
+    "graphql": "^15.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
