--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "license": "0BSD",
   "dependencies": {
-    "gatsby": "^4.7.2",
-    "gatsby-source-graphql": "^4.7.0",
+    "gatsby": "^4.11.0-next.2",
+    "gatsby-source-graphql": "^4.11.0-next.1",
     "graphql": "^15.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
